# rich-run

./: LICENSE  README.ja.md  README.md  README.zh.md  pyproject.toml
.github/workflows/: publish.yml
rich_run/: __init__.py  banner.py  main.py
